# human_tracker

./: .gitignore  README.md  env_vars.sh  human_tracker.code-workspace  laptop_bashrc  method2-1.sh
documentation/: Basic Users Guide.docx
results/: Still.csv  front_rgbd.csv  live.csv
src/Acuity/: CMakeLists.txt  package.xml
src/HaarAda/: CMakeLists.txt  package.xml
src/HaarAda/include/HaarAda/: haarada.hpp
src/HaarAda/launch/: run_live_kinect.launch
src/HaarAda/src/: haarada.cpp  haarada_node.cpp  haarada_nodelet.cpp
src/HaarDispAda/: CMakeLists.txt  package.xml
src/HaarDispAda/include/HaarDispAda/: haardispada.hpp
src/HaarDispAda/launch/: run_live_kinect.launch
src/HaarDispAda/src/: haardispada.cpp  haardispada_node.cpp  haardispada_nodelet.cpp
src/HaarSvm/: CMakeLists.txt  package.xml
src/HaarSvm/include/HaarSvm/: haarsvm.hpp
src/HaarSvm/launch/: run_live_kinect.launch
src/HaarSvm/src/: haarsvm.cpp  haarsvm_node.cpp  haarsvm_nodelet.cpp
src/HogSvm/: CMakeLists.txt  package.xml
src/HogSvm/include/HogSvm/: hogsvm.hpp
src/HogSvm/src/: hogsvm.cpp  hogsvm_node.cpp  hogsvm_nodelet.cpp
src/System_Launch/: CMakeLists.txt  package.xml
src/System_Launch/launch/: run_from_bag_kinect.launch  run_kinect_node.launch  run_kinect_test.launch
src/bbox_info/: CMakeLists.txt  package.xml
src/bbox_info/src/: bbox_info_node.cpp
src/consistency/: CMakeLists.txt  package.xml
src/consistency/launch/: roi_display.launch  run_from_dir.launch  run_live_kinect.launch
src/consistency/src/: consistency.cpp  consistency_node.cpp  consistency_nodelet.cpp
src/dataset_testing/: CMakeLists.txt  package.xml
src/dataset_testing/src/: dataset_testing_node.cpp
src/dataset_testing/src/pyscripts/: calc_precision_recall.py  merge_dataset_method_data.py
src/depth_image_proc/src/nodelets/: point_cloud_xyzrgb.cpp
src/find_distance/: CMakeLists.txt  package.xml
src/find_distance/src/: find_distance_node.cpp
src/kinect_data/: CMakeLists.txt  package.xml
src/labeler/build-src-Desktop-Debug/: Makefile  moc_main_window.cpp  src  ui_main_window.h
src/object_tracking/: CMakeLists.txt  package.xml
src/object_tracking/include/object_tracking/: features.h  tracker.h
src/object_tracking/launch/: tracking.launch
src/object_tracking/src/: features.cpp  particle_filter.cpp  tracker.cpp
src/object_tracking/src/nodes/: object_tracking_node.cpp
src/roiPlayer/: CMakeLists.txt  package.xml
src/roiPlayer/launch/: roiPlayer.launch
src/roiPlayer/src/: main.cpp
src/roiViewer/: CMakeLists.txt  package.xml
src/roiViewer/launch/: roiViewer.launch
src/roiViewer/src/: main.cpp
src/roi_msgs/: CMakeLists.txt  package.xml
src/roi_msgs/src/: overlap.cpp
src/visualize_bbox/: CMakeLists.txt  package.xml
src/visualize_bbox/rviz/: visualize.rviz
src/visualize_bbox/src/: visualize_bbox_node.cpp
