<?xml version="1.0"?>
<package format="2">
  <name>consistency</name>
  <version>0.0.0</version>
  <description>
  
	consistency
  
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="valentin@todo.todo">valentin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url>http://wiki.ros.org/consistency</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author >parallels</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <depend>image_transport</depend>
  <!-- <depend>cv_bridge</depend> -->
  <depend>roi_msgs</depend>
  <!-- <depend>opencv2</depend> -->
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  
  <!-- <build_depend>image_transport</build_depend> -->
  <build_depend>cv_bridge</build_depend>
  <!-- <build_depend>roi_msgs</build_depend> -->
  <build_depend>opencv2</build_depend>
  <!-- <build_depend>nodelet</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <build_export_depend>image_transport</build_export_depend> -->
  <!-- <build_export_depend>cv_bridge</build_export_depend> -->
  <!-- <build_export_depend>roi_msgs</build_export_depend> -->
  <build_export_depend>opencv2</build_export_depend>
  <!-- <build_export_depend>nodelet</build_export_depend> -->
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <!-- <exec_depend>std_msgs</exec_depend> -->
  
  <!-- <exec_depend>image_transport</exec_depend> -->
  <exec_depend>cv_bridge</exec_depend>
  <!-- <exec_depend>roi_msgs</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <exec_depend>opencv2</exec_depend>
  <!-- <exec_depend>nodelet</exec_depend> -->
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<rosbuild cmake_directory="${prefix}/cmake"/>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lconsistency"/>    
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
